--- a/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.scss
+++ b/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.scss
@@ -29,6 +29,7 @@
         }
         .confirm__modal-title {
           font-weight: bold;
+          font-family: $titleFontFamily;
         }
       }
       .warning-header {
