--- a/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
+++ b/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
@@ -10,7 +10,9 @@
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
-    <div class="modal-body">{{message}}</div>
+    <div class="modal-body">{{message}}
+      <ng-content></ng-content>
+    </div>
     <div class="modal-footer">
       <button 
         type="button" 
