Implementing buttons and paste method to remove HTML from pasted text

--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -238,6 +238,7 @@
                 <div 
                   class="editor" 
                   contenteditable="true"
+                  (paste)="removeHTML($event)"
                 >
                 </div>
                 <!-- <textarea
