Fne 830 mahendra sprint10 (#353)
* Patch notnull constraints (#350)

* CSS fix for transaction screen

* Making view transactions button work

* Code cleanup

* Fne 744 praveen sprint9 (#340)

* Base code of FNE-744

* modified report_id to accept null values and report it as zero

* changes to api to add in try block

* Fne 744 praveen sprint9 (#341)

* Base code of FNE-744

* modified report_id to accept null values and report it as zero

* changes to api to add in try block

* modifications to sched_a api on reports_id column

* functions to catch not null db error in backend

* Patch notnull constraints (#351)

* CSS fix for transaction screen

* Making view transactions button work

* Code cleanup

* Fne 744 praveen sprint9 (#340)

* Base code of FNE-744

* modified report_id to accept null values and report it as zero

* changes to api to add in try block

* Fne 744 praveen sprint9 (#341)

* Base code of FNE-744

* modified report_id to accept null values and report it as zero

* changes to api to add in try block

* modifications to sched_a api on reports_id column

* functions to catch not null db error in backend

* coverage dates error handling

* modifying the cvg dates

* Fne 800 praveen sprint9 (#352)

* CSS fix for transaction screen

* Making view transactions button work

* Code cleanup

* Fne 744 praveen sprint9 (#340)

* Base code of FNE-744

* modified report_id to accept null values and report it as zero

* changes to api to add in try block

* Fne 744 praveen sprint9 (#341)

* Base code of FNE-744

* modified report_id to accept null values and report it as zero

* changes to api to add in try block

* modifications to sched_a api on reports_id column

* functions to catch not null db error in backend

* coverage dates error handling

* modifying the cvg dates

* templates/email_ack.html

* FNE 830 change

FNE 830 change

* FNE 830 change

FNE 830

--- a/django-backend/templates/email_ack.html
+++ b/django-backend/templates/email_ack.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/xhtml" style="min-height: 100%; background-color: #e8e8e8;"><head>
+  <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/xhtml" style="min-height: 100%; background-color: #e8e8e8;"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta content="width=device-width" name="viewport">
 <title>Federal Election Commission - Filing Error  </title>
@@ -472,16 +472,15 @@ color: #000000;
 <table class="spacer" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; width: 100%; padding: 0;"><tbody><tr style="vertical-align: top; padding: 0;" align="left"><td class="s30" height="30px" style="word-wrap: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; mso-line-height-rule: exactly; color: #000000; font-family: Arial, Helvetica, sans-serif; font-weight: normal; line-height: 30px; font-size: 30px; margin: 0; padding: 0;" align="left" valign="top">&nbsp;</td></tr></tbody></table>
 
 
-<p class="lead" style="color: #000000; font-family: gandhi,Arial, Helvetica, sans-serif; font-weight: normal; line-height: 1.6; font-size: 24px; margin: 0 0 0px; padding: 0;" align="left"><b>FEC electronic filing results </b></p><br> 
+<p class="lead" style="color: #000000; font-family: gandhi,Arial, Helvetica, sans-serif; font-weight: normal; line-height: 1.6; font-size: 24px; margin: 0 0 0px; padding: 0;" align="left"><b>FEC Electronic Filing Results </b></p><br> 
 <p class="lead" style="color: #000000; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 1.6; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left">
-Your filing was received and accepted by our system on {{data.updated_at}}, and was assigned the Filing ID: {{data.id}}<br><br>
+Your filing was received and accepted by our system on {{data.updated_at}}<br><br>
 <table class="row" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; width: 100%; position: relative; display: table; padding: 0;">
 <tbody>
+<tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b>Filing ID:</b> </td><td>{{data.id}}</td></tr>
 <tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b>Committee ID:</b> </td><td>{{data.committeeid}}</td></tr>
 <tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b><b>Committee name:</b></td><td>{{data.committeename}}</td></tr>
 <tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b><b>Form type:</b></td><td>{{data.form_type}}  </td></tr>
-<tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b><b>Schedule:</b></td><td></td></tr>
-<tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b><b>From/through:</b></td><td>{{data.coverage_start_date}}/{{data.coverage_end_date}}</td></tr>
 <tr style="vertical-align: top; padding: 0; font-family: karla, Arial, Helvetica, sans-serif ; font-weight: normal; line-height: 2; font-size: 16px; margin: 0 0 0px; padding: 0;" align="left"> <td><b><b>Filing software/version:</b></td><td valign="bottom">8.3.0</td></tr>
 </tbody></table>
 
