--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -55,8 +55,7 @@
               Due in {{formDueDate}} days.
               <a
                 class="btn btn-link btn-edit"
-                [routerLink]="['/forms/form', '3X']"
-                [queryParams]="{step: 'step_1'}"
+                (click)="editFrom()"
               >
                 <i class="edit-icon" aria-hidden="true"></i>
                 <span class="sr-only">Click to edit date.</span>
