--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -55,7 +55,8 @@
               Due in {{formDueDate}} days.
               <a
                 class="btn btn-link btn-edit"
-                (click)="editFrom()"
+                [routerLink]="['/forms/form', '3X']"
+                [queryParams]="{step: 'step_1'}"
               >
                 <i class="edit-icon" aria-hidden="true"></i>
                 <span class="sr-only">Click to edit date.</span>
