--- a/front-end/src/app/forms/form-99/reason/reason.component.scss
+++ b/front-end/src/app/forms/form-99/reason/reason.component.scss
@@ -133,6 +133,7 @@
         .editor {
           border: 1px solid black;
           box-shadow: 0 .1rem .4rem black;
+          cursor: text;
           font-size: 1.2rem;
           margin-bottom: 1rem;
           overflow: scroll; 
@@ -143,6 +144,21 @@
           &:empty:before {
             content: attr(placeholder);
             color: #757575;
+          }
+          ol {
+            list-style-type: decimal;
+          }
+          ul {
+            list-style-type: disc;
+          }
+          ol,
+          ul {
+              display: block;
+              margin-block-start: 1em;
+              margin-block-end: 1em;
+              margin-inline-start: 0px;
+              margin-inline-end: 0px;
+              padding-inline-start: 40px;            
           }
         }
         @include clearfix();
