f3x monthly report filing due date; f3x transaction siderbar search icon position; f3x transaction type validation error message change text

--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
@@ -37,7 +37,7 @@
         <ng-container *ngIf="!transactionCategorySelected && frmSubmitted">
           <div class="grid-row">
             <div class="grid-row__col grid-row__col--12 text-center text-error">
-              You must select a transaction category first.
+              Please select a transaction type.
             </div>
           </div>
         </ng-container>
@@ -45,7 +45,7 @@
           <ng-container *ngIf="transactionTypeFailed">
             <div class="grid-row">
               <div class="grid-row__col grid-row__col--12 text-center text-error">
-                You must select a transaction type first.
+                Please select a transaction type.
               </div>
             </div>
           </ng-container>
