--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -2,14 +2,21 @@
   <header>
     <h3 class="text-center">Transaction Categories</h3>
     <hr/>
-    <div class="search-field">
-      <i class="search-icon" aria-hidden="true"></i>
-      <input
-        type="text"
-        name="search"
-        class="search-input"
-        placeholder="Search by Type"
-      />
+    <div class="search-field-container">
+      <div class="input-group">              
+        <input
+          type="text"
+          name="search"
+          class="search-input"
+          placeholder="Search by Type"
+          class="form-control py-1"
+        />
+        <div class="input-group-append">
+          <span class="input-group-text">
+            <i class="search-icon text-grey" aria-hidden="true"></i>
+          </span>
+        </div>
+      </div> 
     </div>
   </header>
   <section>
