--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.scss
@@ -4,26 +4,9 @@
   margin-left: auto;
   margin-right: auto;
   min-height: 500px;
-  position: relative;
-  .search-field {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-    position: relative;
-    text-align: center;
-    .search-icon {
-      color: $shuttleGray;
-      position: absolute;
-      right: 35px;
-      top: 10px;
-      z-index: 1;
-    }
-    input[type='text'] {
-      @include make-text-input(175px, 1.5em, 1em, 1em);
-      margin-left: auto;
-      margin-right: auto;
-      position: relative;
-    }
+  position: relative;  
+  .search-field-container {
+    padding: 5px 15px 0 15px;
   }
   section {
     .form-sidebar__links {
