Changing button order

--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -178,15 +178,15 @@
                   <button 
                     type="button" 
                     class="btn btn-default editor-btn"
-                    title="Justify"
-                    data-type="justify"
+                    title="Align Left"
+                    data-type="justifyLeft"
                     (click)="insertHTML($event)"                      
                   >
-                    <i class="justify-icon" aria-hidden="true"></i>
+                    <i class="align-left-icon" aria-hidden="true"></i>
                     <span class="sr-only">
-                      Justify
+                      Align Left
                     </span>
-                  </button>  
+                  </button>                  
                   <button 
                     type="button" 
                     class="btn btn-default editor-btn"
@@ -210,19 +210,19 @@
                     <span class="sr-only">
                       Align Right
                     </span>
-                  </button>   
+                  </button>  
                   <button 
                     type="button" 
                     class="btn btn-default editor-btn"
-                    title="Align Left"
+                    title="Justify"
                     data-type="justifyLeft"
                     (click)="insertHTML($event)"                      
                   >
-                    <i class="align-left-icon" aria-hidden="true"></i>
+                    <i class="justify-icon" aria-hidden="true"></i>
                     <span class="sr-only">
-                      Align Left
+                      Justify
                     </span>
-                  </button>    
+                  </button>                         
                   <button 
                     type="button" 
                     class="btn btn-default editor-btn"
