due date fixes; category type text header fix

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -83,6 +83,7 @@
         <f3x-individual-receipt
           [formOptionsVisible]="formOptionsVisible"
           [selectedOptions]="selectedOptions"
+          [transactionTypeText]="transactionTypeText"
           (status)='onNotify($event)'
         >
         </f3x-individual-receipt>
