--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -8,8 +8,8 @@
         <div class="float-left">
           <h1>
             Form 3X
-            <ng-container *ngIf="transactionType">
-              / {{ transactionType }}
+            <ng-container *ngIf="transactionTypeText">
+              / {{ transactionTypeText }}
             </ng-container>
           </h1>
         </div>
