--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
@@ -107,7 +107,7 @@
                           [type]="childOption.type"
                           [name]="secondaryOption"
                           [value]="childOption.value"
-                          (change)="updateTypeSelected($event)"
+                          (change)="updateTypeSelected($event, childOption)"
                         />
                         <label
                           for="{{childOption.name}}"
