FNE 834 - left-align tooltip text

--- a/front-end/src/app/shared/partials/sign/sign.component.scss
+++ b/front-end/src/app/shared/partials/sign/sign.component.scss
@@ -151,6 +151,9 @@
         footer {
         }
       }
+      .tooltip-inner {
+        text-align: left;
+      }
     }
   }
 } // .signee-container
