Fne801 saidmtz sprint10 (#363)
* FNE 801 Fixed label typos and preview text padding

* fne 801 preview padding

* FNE 801 Preview text padding

--- a/front-end/src/app/shared/partials/preview/preview.component.scss
+++ b/front-end/src/app/shared/partials/preview/preview.component.scss
@@ -108,11 +108,13 @@
 				.label {
 					font-family: $labelFontFamily;
 					font-weight: bold;
-					margin-bottom: 1em;
+					margin: 1em;
+					margin-left: 0;
 				}				
 				.text {
 					font-family: $mainFontFamily;
 					margin-bottom: 1em;
+					margin-right: .75em;
 				}
 			}	
 			.validate__form {
