f3x use hidden to preserve report sidebar settings between steps; f3x fix to detect date changes in report sidebar

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -1,6 +1,6 @@
 <div class="forms__wizard" *ngIf="!loadingData">
   <div class="form__sidebar" *ngIf="step!=='financial_summary'">
-    <div *ngIf="step==='step_1'">
+    <div [hidden]="step!=='step_1'">
      <report-type-sidebar
         title="Report Coverage Dates"
         (status)="onNotify($event)"
